2004-09-07  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b3)

	* Removed File menu on mac: it's empty...

2004-09-03  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b2)

	* Fixed Drag and Drop issues for first-time users.

2004-09-02  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b1)

	* Added Russian translation (thanks Igor).

2004-08-26  Pierre-Luc Paour <gallery@paour.com> (1.4.1)

	* Released.

2004-08-24  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b13)

	* Again fixed cookie parsing bugs in stupid HTTPClient library.
	* Fixed proxy behavior when a a proxy is set in the Java Plugin
	  but no HTTP proxy is present.
	* Added support for G2 installations where 'remote' module is
	  not active.

2004-08-23  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b12)

	* Fixed basic auth dialog not working properly.

2004-08-20  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b11)

	* Fixed crashing bug for applets under Opera.

2004-08-19  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b10)

	* GR now honors the maximum size for images and uploads
	  that rather than the intermediate size, if set.

2004-08-17  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b9)

	* Fixed redirect testing after upload in applet.

2004-08-17  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b8)

	* Fixed duplicate root album in New Album dialog on G2.

2004-08-13  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b7)

	* Fixed cookie handling in HTTPClient (fixes losing G2 sessions).
	* Better detection of G2.
	* 2_5 handles 2.3 protocol.

2004-08-11  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b6)

	* No redirect for embedded applets.

2004-08-11  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b5)

	* AppletMini now imports OsShutdown dynamically, to prevent
	  the illegal signature problems.

2004-08-06  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b4)

	* AppletMini doesn't try to refresh album page when it's in G2 mode.

2004-08-04  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b3)
