@@ -21,8 +21,10 @@ MainFrame.albums = Albums
 MainFrame.panel1 = Destination Gallery
 MainFrame.brwsBtnTxt = Add pictures...
 MainFrame.brwsBtnTip = Find images to add to the currently selected album. This button is disabled, if the currently selected album is read-only or you're not logged in.
-MainFrame.sortBtnTxt = Sort pictures
-MainFrame.sortBtnTip = Sort the pictures in the current album alphabetically.
+MainFrame.sortBtnTxt = Sort pictures...
+MainFrame.sortBtnTip = Resort images in the current album according to various orders
+MainFrame.sort.filename = by filename
+MainFrame.sort.exifcreation = by EXIF creation date
 MainFrame.gllryCombo = Select a Gallery to which you want to log in
 MainFrame.noTitleHeader = <unsaved>
 MainFrame.OK_toSaveBeforeClose = Save the current file before closing?
